# PyMicroscope

./: .coveragerc  .gitignore  README.md  config.py  pyproject.toml  read_write_command.py  requirements.txt  run_coverage.sh
docs/: vrscdt.m
pymicroscope/motionDevices/: sutterLinearDevice.py
pymicroscope/utils/: callable.py  loggable.py  unifiedprocess.py
src/pymicroscope/: __init__.py  _version.py  actions.py  app_notifications.py  automated_delays.py  microscope_app.py  myMicroscope.py  position_and_mapcontroller.py  sample.py  save_history.py  savetask.py  sutterconfigdialog.py  vmsconfigdialog.py  vmscontroller.py
src/pymicroscope/acquisition/: LSMImageProvider.py  cameraprovider.py  epiphan.py  imageprovider.py  lsmprovider.py  remoteprovider.py  v2u_defs.py
src/pymicroscope/acquisition/epiphan/: README.md  __init__.py  epiphanimageprovider.py  epiphanlibwrapper.py  frmgrab.h  libfrmgrab.dylib
src/pymicroscope/acquisition/libepiphan/: v2u_defs.h
src/pymicroscope/acquisition/opencv/: opencvprovider.py
src/pymicroscope/base/: mapcontroller.py  position_and_mapcontroller.py
src/pymicroscope/experiment/: actions.py  experiments.py
src/pymicroscope/hardware/: kinesisdevice.py
src/pymicroscope/plugins/: delay_line.py
src/pymicroscope/utils/: __init__.py  callable.py  configurable.py  loggable.py  pyroprocess.py  terminable.py  thread_utils.py  unifiedprocess.py
tests/: better.sutter.py  conftest.py  envtest.py  test_actions.py  test_callable.py  test_cameraprovider.py  test_configurable.py  test_delais.py  test_delays.py  test_example.py  test_imageprovider.py  test_kinesisdevice.py  test_loggable.py  test_mapcontroller.py  test_pyro.py  test_read_write_command.py  test_remoteprovider.py  test_sample.py  test_setter.py  test_sutter.py  test_terminable.py  test_unifiedProcess.py  test_unifiedprocess.py  test_vmscontroller.py  test_vsync_controller.py  test_wrapper_epiphan.py  tests_shared_memory.py  vmscontroller.py
utils/: pyroprocess.py  terminable.py
